[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycasso"
version = "0.1.0"
description = "A description of your library"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = []  # Add any dependencies your library needs

[tool.setuptools]
packages = ["pycasso"]
package-dir = {"" = "src"}  # Tells setuptools to look for packages in src/
